--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: lightblue;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+
 }
 
 #header-img {
@@ -52,4 +56,65 @@ li {
 li:hover {
     background-color: #0b2340;
     color: white;
+}
+
+/* Hero section */
+
+.hero-container {
+    display: grid;
+    text-align: center;
+    max-width: 100%;
+    padding: 2rem;
+    background-color: #0b2340;
+    color: white;
+    padding-top: 16rem;
+}
+
+#hero > h2 {
+    margin: 1rem auto;
+}
+
+/* Offerings section */
+
+.offerings-container {
+    text-align: center;
+}
+
+.description {
+    max-width: 100%;
+    padding: 2rem;
+    background-color: #0b2340;
+    color: white;
+}
+
+.two {
+    background-color: white;
+    color: #0b2340;
+}
+
+#shows, #classes, #corporate {
+    margin-bottom: 1rem;
+}
+
+.sample-container {
+    margin: 2rem 0;
+}
+
+#video {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+}
+
+footer {
+    text-align: center;
+}
+
+@media (min-width: 750px) {
+    footer {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
 }
